fix(css): Add class for light mode avatar

--- a/www/css/skeleton-light.css
+++ b/www/css/skeleton-light.css
@@ -165,3 +165,10 @@ hr {
   border-width: 0;
   border-top: 1px solid #E1E1E1; }
 
+
+  .avatar {
+    vertical-align: middle;
+    width: 96px;
+    height: 96px;
+    border-radius: 50%;
+  }
