Add support for micro.blog

--- a/template/index.html
+++ b/template/index.html
@@ -96,6 +96,10 @@
         <a id="twitter" class="button button-twitter" href="#" target="_blank" rel="noopener"><img class="icon" src="icons/twitter.svg" alt="Twitter Logo">Twitter</a>
           <br>
 
+        <!-- micro.blog -->
+        <a id="microblog" class="button button-microblog" href="#" target="_blank" rel="noopener"><img class="icon" src="icons/microblog.svg" alt="Micro.blog Logo"/>Micro.blog</a>
+          <br>
+
         <!-- Instagram -->
         <a id="instagram" class="button button-instagram" href="#" target="_blank" rel="noopener"><img class="icon" src="icons/instagram.svg" alt="Instagram Logo">Instagram</a>
           <br>
