Add support for letterboxd.com

--- a/template/index.html
+++ b/template/index.html
@@ -104,6 +104,10 @@
         <a id="instagram" class="button button-instagram" href="#" target="_blank" rel="noopener"><img class="icon" src="icons/instagram.svg" alt="Instagram Logo">Instagram</a>
           <br>
 
+        <!-- Letterboxd -->
+        <a id="letterboxd" class="button button-letterboxd" href="#" target="_blank" rel="noopener"><img class="icon" src="icons/letterboxd.svg" alt="Letterboxd Logo">Letterboxd</a>
+          <br>
+
         <!-- Facebook -->
         <a id="facebook" class="button button-facebook" href="#" target="_blank" rel="noopener"><img class="icon" src="icons/facebook.svg" alt="Facebook Logo">Find us on Facebook</a>
           <br>
