feat(mastodon): Add env for Mastodon
Make all necessary changes to add a Mastodon entry

--- a/template/index.html
+++ b/template/index.html
@@ -96,6 +96,10 @@
         <a id="twitter" class="button button-twitter" href="#" target="_blank" rel="noopener"><img class="icon" src="icons/twitter.svg" alt="Twitter Logo">Twitter</a>
           <br>
 
+        <!-- Mastodon -->
+        <a id="mastodon" class="button button-mastodon" href="#" target="_blank" rel="noopener"><img class="icon" src="icons/mastodon.svg" alt="Mastodon Logo">Mastodon</a>
+          <br>
+
         <!-- micro.blog -->
         <a id="microblog" class="button button-microblog" href="#" target="_blank" rel="noopener"><img class="icon" src="icons/microblog.svg" alt="Micro.blog Logo"/>Micro.blog</a>
           <br>
