--- a/template/index.html
+++ b/template/index.html
@@ -2,165 +2,171 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title id="meta-title">LittleLink</title>
-  <meta id="meta-description" name="description" content="Find us online!">
-  <meta id="meta-author" name="author" content="Seth Cottle">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link id="theme" rel="stylesheet" href="css/skeleton-light.css">
-  <link rel="stylesheet" href="css/brands.css">
-  <link id="favicon" rel="icon" type="image/png" href="images/avatar.png">
+    <meta charset="utf-8">
+    <title id="meta-title">LittleLink</title>
+    <meta id="meta-description" name="description" content="Find us online!">
+    <meta id="meta-author" name="author" content="Seth Cottle">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link id="theme" rel="stylesheet" href="css/skeleton-light.css">
+    <link rel="stylesheet" href="css/brands.css">
+    <link id="favicon" rel="icon" type="image/png" href="images/avatar.png">
 </head>
 
 <body>
-  <div class="container">
-    <div class="row">
-      <div class="column" style="margin-top: 10%">
+    <div class="container">
+        <div class="row">
+            <div class="column" style="margin-top: 10%">
 
-        <img id="avatar" class="avatar" src="images/avatar.png" srcset="images/avatar@2x.png 2x" alt="LittleLink Logo">
+                <img id="avatar" class="avatar" src="images/avatar.png" srcset="images/avatar@2x.png 2x"
+                    alt="LittleLink Logo">
 
-        <h1 id="name">LittleLink</h1>
+                <h1 id="name">LittleLink</h1>
 
-        <p id="bio">LittleLink is an open source DIY alternative to services like <a href="https://linktr.ee"
-            target="_blank" rel="noopener">Linktree</a> and <a href="https://many.link" target="_blank"
-            rel="noopener">many.link</a>. LittleLink was built using <a href="http://www.getskeleton.com"
-            target="_blank" rel="noopener">Skeleton</a>, a dead simple, responsive boilerplate—we’ve just created some
-          branded buttons and stripped out the things you won't need. 😊</p>
+                <p id="bio">LittleLink is an open source DIY alternative to services like <a href="https://linktr.ee"
+                        target="_blank" rel="noopener">Linktree</a> and <a href="https://many.link" target="_blank"
+                        rel="noopener">many.link</a>. LittleLink was built using <a href="http://www.getskeleton.com"
+                        target="_blank" rel="noopener">Skeleton</a>, a dead simple, responsive boilerplate—we’ve just
+                    created some
+                    branded buttons and stripped out the things you won't need. 😊</p>
 
-        <a id="github" class="button button-github" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/github.svg" alt="GitHub Logo">GitHub</a>
-        <br>
+                <a id="github" class="button button-github" href="#" target="_blank" rel="noopener"><img class="icon"
+                        src="icons/github.svg" alt="GitHub Logo">GitHub</a>
+                <br>
 
-        <a id="twitter" class="button button-twitter" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/twitter.svg" alt="Twitter Logo">Twitter</a>
-        <br>
+                <a id="twitter" class="button button-twitter" href="#" target="_blank" rel="noopener"><img class="icon"
+                        src="icons/twitter.svg" alt="Twitter Logo">Twitter</a>
+                <br>
 
-        <a id="mastodon" class="button button-mastodon" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/mastodon.svg" alt="Mastodon Logo">Mastodon</a>
-        <br>
+                <a id="mastodon" class="button button-mastodon" href="#" target="_blank" rel="noopener"><img
+                        class="icon" src="icons/mastodon.svg" alt="Mastodon Logo">Mastodon</a>
+                <br>
 
-        <a id="microblog" class="button button-microblog" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/microblog.svg" alt="Micro.blog Logo" />Micro.blog</a>
-        <br>
+                <a id="microblog" class="button button-microblog" href="#" target="_blank" rel="noopener"><img
+                        class="icon" src="icons/microblog.svg" alt="Micro.blog Logo" />Micro.blog</a>
+                <br>
 
-        <a id="instagram" class="button button-instagram" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/instagram.svg" alt="Instagram Logo">Instagram</a>
-        <br>
+                <a id="instagram" class="button button-instagram" href="#" target="_blank" rel="noopener"><img
+                        class="icon" src="icons/instagram.svg" alt="Instagram Logo">Instagram</a>
+                <br>
 
-        <a id="letterboxd" class="button button-letterboxd" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/letterboxd.svg" alt="Letterboxd Logo">Letterboxd</a>
-        <br>
+                <a id="letterboxd" class="button button-letterboxd" href="#" target="_blank" rel="noopener"><img
+                        class="icon" src="icons/letterboxd.svg" alt="Letterboxd Logo">Letterboxd</a>
+                <br>
 
-        <a id="facebook" class="button button-facebook" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/facebook.svg" alt="Facebook Logo">Find us on Facebook</a>
-        <br>
+                <a id="facebook" class="button button-facebook" href="#" target="_blank" rel="noopener"><img
+                        class="icon" src="icons/facebook.svg" alt="Facebook Logo">Find us on Facebook</a>
+                <br>
 
-        <a id="facebook-messenger" class="button button-messenger" href="#" target="_blank" rel="noopener"><img
-            class="icon" src="icons/messenger.svg" alt="Facebook Messenger Logo">Chat on Messenger</a>
-        <br>
+                <a id="facebook-messenger" class="button button-messenger" href="#" target="_blank" rel="noopener"><img
+                        class="icon" src="icons/messenger.svg" alt="Facebook Messenger Logo">Chat on Messenger</a>
+                <br>
 
-        <a id="linkedin" class="button button-linkedin" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/linkedin.svg" alt="LinkedIn Logo">LinkedIn</a>
-        <br>
+                <a id="linkedin" class="button button-linkedin" href="#" target="_blank" rel="noopener"><img
+                        class="icon" src="icons/linkedin.svg" alt="LinkedIn Logo">LinkedIn</a>
+                <br>
 
-        <a id="youtube" class="button button-youtube" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/youtube.svg" alt="YouTube Logo">YouTube</a>
-        <br>
+                <a id="youtube" class="button button-youtube" href="#" target="_blank" rel="noopener"><img class="icon"
+                        src="icons/youtube.svg" alt="YouTube Logo">YouTube</a>
+                <br>
 
-        <a id="discord" class="button button-discord" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/discord.svg" alt="Discord Logo">Discord</a>
-        <br>
+                <a id="discord" class="button button-discord" href="#" target="_blank" rel="noopener"><img class="icon"
+                        src="icons/discord.svg" alt="Discord Logo">Discord</a>
+                <br>
 
-        <a id="twitch" class="button button-twitch" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/twitch.svg" alt="Twitch Logo">Twitch</a>
-        <br>
+                <a id="twitch" class="button button-twitch" href="#" target="_blank" rel="noopener"><img class="icon"
+                        src="icons/twitch.svg" alt="Twitch Logo">Twitch</a>
+                <br>
 
-        <a id="producthunt" class="button button-producthunt" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/producthunt.svg" alt="Product Hunt Logo">Product Hunt</a>
-        <br>
+                <a id="producthunt" class="button button-producthunt" href="#" target="_blank" rel="noopener"><img
+                        class="icon" src="icons/producthunt.svg" alt="Product Hunt Logo">Product Hunt</a>
+                <br>
 
-        <a id="snapchat" class="button button-snapchat" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/snapchat.svg" alt="Snapchat Logo">Snapchat</a>
-        <br>
+                <a id="snapchat" class="button button-snapchat" href="#" target="_blank" rel="noopener"><img
+                        class="icon" src="icons/snapchat.svg" alt="Snapchat Logo">Snapchat</a>
+                <br>
 
-        <a id="spotify" class="button button-spotify" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/spotify.svg" alt="Spotify Logo">Spotify</a>
-        <br>
+                <a id="spotify" class="button button-spotify" href="#" target="_blank" rel="noopener"><img class="icon"
+                        src="icons/spotify.svg" alt="Spotify Logo">Spotify</a>
+                <br>
 
-        <a id="reddit" class="button button-reddit" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/reddit.svg" alt="Reddit Logo">Reddit</a>
-        <br>
+                <a id="reddit" class="button button-reddit" href="#" target="_blank" rel="noopener"><img class="icon"
+                        src="icons/reddit.svg" alt="Reddit Logo">Reddit</a>
+                <br>
 
-        <a id="medium" class="button button-medium" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/medium.svg" alt="Medium Logo">Medium</a>
-        <br>
+                <a id="medium" class="button button-medium" href="#" target="_blank" rel="noopener"><img class="icon"
+                        src="icons/medium.svg" alt="Medium Logo">Medium</a>
+                <br>
 
-        <a id="pinterest" class="button button-pinterest" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/pinterest.svg" alt="Pinterest Logo">Follow on Pinterest</a>
-        <br>
+                <a id="pinterest" class="button button-pinterest" href="#" target="_blank" rel="noopener"><img
+                        class="icon" src="icons/pinterest.svg" alt="Pinterest Logo">Follow on Pinterest</a>
+                <br>
 
-        <a id="tiktok" class="button button-tiktok" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/tiktok.svg" alt="TikTok Logo">TikTok</a>
-        <br>
+                <a id="tiktok" class="button button-tiktok" href="#" target="_blank" rel="noopener"><img class="icon"
+                        src="icons/tiktok.svg" alt="TikTok Logo">TikTok</a>
+                <br>
 
-        <a id="email" class="button button-default" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/email.svg" alt="Email Icon">hello@littlelink.io</a>
-        <br>
+                <a id="email" class="button button-default" href="#" target="_blank" rel="noopener"><img class="icon"
+                        src="icons/email.svg" alt="Email Icon">hello@littlelink.io</a>
+                <br>
 
-        <a id="email-alt" class="button button-default" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/email_alt.svg" alt="Email Icon">hello@littlelink.io</a>
-        <br>
+                <a id="email-alt" class="button button-default" href="#" target="_blank" rel="noopener"><img
+                        class="icon" src="icons/email_alt.svg" alt="Email Icon">hello@littlelink.io</a>
+                <br>
 
-        <a id="soundcloud" class="button button-soundcloud" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/soundcloud.svg" alt="SoundCloud Logo">SoundCloud</a>
-        <br>
+                <a id="soundcloud" class="button button-soundcloud" href="#" target="_blank" rel="noopener"><img
+                        class="icon" src="icons/soundcloud.svg" alt="SoundCloud Logo">SoundCloud</a>
+                <br>
 
-        <a id="figma" class="button button-figma" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/figma.svg" alt="Figma Logo">Figma</a>
-        <br>
+                <a id="figma" class="button button-figma" href="#" target="_blank" rel="noopener"><img class="icon"
+                        src="icons/figma.svg" alt="Figma Logo">Figma</a>
+                <br>
 
-        <a id="kit" class="button button-kit" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/kit.svg" alt="Kit Logo">Kit</a>
-        <br>
+                <a id="kit" class="button button-kit" href="#" target="_blank" rel="noopener"><img class="icon"
+                        src="icons/kit.svg" alt="Kit Logo">Kit</a>
+                <br>
 
-        <a id="telegram" class="button button-telegram" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/telegram.svg" alt="Telegram Logo">Telegram</a>
-        <br>
+                <a id="telegram" class="button button-telegram" href="#" target="_blank" rel="noopener"><img
+                        class="icon" src="icons/telegram.svg" alt="Telegram Logo">Telegram</a>
+                <br>
 
-        <a id="tumblr" class="button button-tumblr" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/tumblr.svg" alt="Tumblr Logo">Tumblr</a>
-        <br>
+                <a id="tumblr" class="button button-tumblr" href="#" target="_blank" rel="noopener"><img class="icon"
+                        src="icons/tumblr.svg" alt="Tumblr Logo">Tumblr</a>
+                <br>
 
-        <a id="steam" class="button button-steam" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/steam.svg" alt="Steam Logo">Steam</a>
-        <br>
+                <a id="steam" class="button button-steam" href="#" target="_blank" rel="noopener"><img class="icon"
+                        src="icons/steam.svg" alt="Steam Logo">Steam</a>
+                <br>
 
-        <a id="vimeo" class="button button-vimeo" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/vimeo.svg" alt="Vimeo Logo">Vimeo</a>
-        <br>
+                <a id="vimeo" class="button button-vimeo" href="#" target="_blank" rel="noopener"><img class="icon"
+                        src="icons/vimeo.svg" alt="Vimeo Logo">Vimeo</a>
+                <br>
 
-        <a id="wordpress" class="button button-wordpress" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/wordpress.svg" alt="Wordpress Logo">Wordpress</a>
-        <br>
+                <a id="wordpress" class="button button-wordpress" href="#" target="_blank" rel="noopener"><img
+                        class="icon" src="icons/wordpress.svg" alt="Wordpress Logo">Wordpress</a>
+                <br>
 
-        <a id="goodreads" class="button button-goodreads" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/goodreads.svg" alt="Goodreads Logo">Goodreads</a>
-        <br>
+                <a id="goodreads" class="button button-goodreads" href="#" target="_blank" rel="noopener"><img
+                        class="icon" src="icons/goodreads.svg" alt="Goodreads Logo">Goodreads</a>
+                <br>
 
-        <a id="skoob" class="button button-skoob" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="icons/skoob.svg" alt="Skoob Logo">Skoob</a>
-        <br>
+                <a id="skoob" class="button button-skoob" href="#" target="_blank" rel="noopener"><img class="icon"
+                        src="icons/skoob.svg" alt="Skoob Logo">Skoob</a>
+                <br>
 
-        <br>
-        <br>
-        <p id="footer">Build your own by forking <a href="https://littlelink.io" target="_blank"
-            rel="noopener">LittleLink</a>.</p>
+                <a id="whatsapp" class="button button-whatsapp" href="$WHATSAPP" target="_blank" rel="noopener"><img
+                        class="icon" src="icons/whatsapp.svg" alt="WhatsApp Logo">WhatsApp</a>
+                <br>
 
-      </div>
+                <br>
+                <br>
+                <p id="footer">Build your own by forking <a href="https://littlelink.io" target="_blank"
+                        rel="noopener">LittleLink</a>.</p>
+
+            </div>
+        </div>
     </div>
-  </div>
 </body>
 
 </html>
