--- a/public/css/brands.css
+++ b/public/css/brands.css
@@ -422,7 +422,7 @@ button:hover,
 }
 .button.button-gitlab:hover,
 .button.button-gitlab:focus {
-  filter: brightness(90%) 
+  filter: brightness(90%)
 }
 
 /* Patreon */
@@ -432,6 +432,16 @@ button:hover,
 }
 .button.button-patreon:hover,
 .button.button-patreon:focus {
-  filter: brightness(90%) 
+  filter: brightness(90%)
+}
+
+/* Dev.to */
+.button.button-devto {
+  color: #000;
+  background-color: #fff;
+}
+.button.button-devto:hover,
+.button.button-devto:focus {
+  filter: brightness(90%);
 }
 
