--- a/public/css/brands.css
+++ b/public/css/brands.css
@@ -479,3 +479,13 @@ button:hover,
 .button.button-stackoverflow:focus {
   filter: brightness(90%)
 }
+
+/* Last.fm */
+.button.button-lastfm {
+  color: #ffffff;
+  background-color: #000101;
+}
+.button.button-lastfm:hover,
+.button.button-lastfm:focus {
+  filter: brightness(90%)
+}
